force-app/main/default/objects/Health_Profile__c/Health_Profile__c.object-meta.xml
<CustomObject>
    <label>Health Profile</label>
    <nameField>
        <displayFormat>HP-{00000000}</displayFormat>
        <label>Health Profile Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>