force-app/main/default/objects/Health_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Health Profiles</relationshipLabel>
    <relationshipName>Health_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>