force-app/main/default/objects/Health_Profile__c/fields/Activity_Factor__c.field-meta.xml
<CustomField>
    <fullName>Activity_Factor__c</fullName>
    <label>Activity Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedentary</fullName>
            </value>
            <value>
                <fullName>Exercise 1-3</fullName>
            </value>
            <value>
                <fullName>Exercise 4-5</fullName>
            </value>
            <value>
                <fullName>Exercise 6-7</fullName>
            </value>
            <value>
                <fullName>Exercise everyday with labor intensive job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>