force-app/main/default/objects/Health_Profile__c/fields/Basal_Metabolic_Rate_BMR__c.field-meta.xml
<CustomField>
    <fullName>Basal_Metabolic_Rate_BMR__c</fullName>
    <formula>IF(
TEXT(BMR_Estimation_Method__c) = &quot;Harris-Benedict Equation&quot;,
66.5 + (13.75 * Weight__c) + (5.003 * Height__c ) - (6.755 * Age__c ),
(10 * Weight__c) + (6.25 * Height__c) - (5 * Age__c) + 5
)</formula>
    <label>Basal Metabolic Rate (BMR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>