force-app/main/default/objects/Health_Profile__c/fields/BMR_Estimation_Method__c.field-meta.xml
<CustomField>
    <fullName>BMR_Estimation_Method__c</fullName>
    <label>BMR Estimation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Harris-Benedict Equation</fullName>
                <default>true</default>
                <label>Harris-Benedict Equation</label>
            </value>
            <value>
                <fullName>Mifflin-St Jeor Equation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>