force-app/main/default/objects/Health_Profile__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Health Profiles</relationshipLabel>
    <relationshipName>Health_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>