force-app/main/default/objects/Health_Profile__c/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <label>Goal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lose Weight - Fast</fullName>
            </value>
            <value>
                <fullName>Lose Weight - Moderate</fullName>
            </value>
            <value>
                <fullName>Lose Weight - Slow</fullName>
            </value>
            <value>
                <fullName>Maintain Weight</fullName>
            </value>
            <value>
                <fullName>Gain Weight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>