force-app/main/default/objects/Health_Profile__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>