force-app/main/default/objects/Health_Profile__c/fields/Target_Calories__c.field-meta.xml
<CustomField>
    <fullName>Target_Calories__c</fullName>
    <formula>Total_Daily_Energy_Expenditure_TDEE__c - 1000</formula>
    <label>Target Calories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>