force-app/main/default/objects/Health_Profile__c/fields/Total_Daily_Energy_Expenditure_TDEE__c.field-meta.xml
<CustomField>
    <fullName>Total_Daily_Energy_Expenditure_TDEE__c</fullName>
    <formula>CASE(Activity_Factor__c,
&quot;Sedentary&quot;, Basal_Metabolic_Rate_BMR__c * 1.2,
&quot;Exercise 1-3&quot;, Basal_Metabolic_Rate_BMR__c * 1.3,
&quot;Exercise 4-5&quot;, Basal_Metabolic_Rate_BMR__c * 1.5,
&quot;Exercise 6-7&quot;, Basal_Metabolic_Rate_BMR__c * 1.7,
Basal_Metabolic_Rate_BMR__c * 1.9)</formula>
    <label>Total Daily Energy Expenditure (TDEE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>