force-app/main/default/objects/Health_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Age__c</columns>
    <columns>Height__c</columns>
    <columns>Weight__c</columns>
    <columns>Total_Daily_Energy_Expenditure_TDEE__c</columns>
    <columns>Target_Calories__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>